--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,7 +66,9 @@
   .header-right {
     display: none;
   }
-  /*--- top ---*/
+  .wrapper {
+    display: none;
+  }
   /*--- top ---*/
   #top {
     height:500px
