--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,7 +8,7 @@
     display:none;
   }
   .top-wrapper {
-    background-image: url("../images/top-cover.gif");
+    background-image: url("../images/top_sp.jpg");
     background-attachment: scroll;
     -webkit-background-size: cover;
     background-size: cover;
