--- a/css/style.css
+++ b/css/style.css
@@ -631,15 +631,18 @@ a span {
    font-size: 1.6rem;
  }
 
-
    /*------  Footer  --------*/
   .main_footer {
       text-align: center;
       color: white;
       background-color: #00A690;
-      padding: 2rem 0;
-      height: 180px;
+      height: 200px;
   }
+
+  .main_footer .container {
+    padding: 2rem 0;
+  }
+
   .main_footer .footer_logo_ourshot {
     margin: 0 auto;
   }
