--- a/css/responsive.css
+++ b/css/responsive.css
@@ -25,8 +25,14 @@
     -webkit-filter: brightness(70%);
     filter:brightness(70%);
   }
+ .inner-bg {
+      position: reletive;
+  }
+
   .top-contact {
-    bottom: 40px;
+    position: absolute;
+    bottom: 30px;
+    right: 35px;
   }
   /*--- about ---*/
   /*--- features ---*/
@@ -175,7 +181,7 @@
 
   .bottom-service-content {
     padding-bottom: 25px;
-    font-size: 0.6rem;
+    font-size: 1.0rem;
   }
 
   /*--- footer ---*/
