fix bottom-height of top-contact

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
-@media (min-width: 1200px) {
+@media all and (min-width: 1001px) {
   .top-contact {
-    bottom: 400px;
+    bottom: 344px;
     position: absolute;
   }
 }
