--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media all and (min-width: 1001px) {
+@media all and (max-width: 1001px) {
   .top-contact {
     bottom: 344px;
     position: absolute;
