--- a/css/style.css
+++ b/css/style.css
@@ -643,11 +643,9 @@ a span {
    font-size: 1.6rem;
    text-align:center;
  }
- .bottom-service-content {
-   padding-bottom: 25px;
- }
  .button-content-bottom  {
    text-align: center;
+   padding-top: 3.0rem;
  }
 
 
