--- a/css/responsive.css
+++ b/css/responsive.css
@@ -179,11 +179,9 @@
     letter-spacing: 2px;
   }
 
-  .service-content {
-    padding-bottom: 25px;
-    font-size: 1.0rem;
+  .button-content-bottom  {
+    padding-top: 2.5rem;
   }
-
 
   /*--- footer ---*/
   .main_footer {
