--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,7 +9,7 @@
   .responsive-menu {
     display:block
   }
-  
+
   /*--- top ---*/
   #top {
      position: relative;
@@ -57,6 +57,9 @@
   /*--- case--- */
   /*--- faq--- */
   /*--- contact--- */
+  #contact {
+    height: auto;
+  }
 }
 
 /* for SmartPhone*/
@@ -177,7 +180,11 @@
     display: none;
   }
   /*--- contact--- */
+  #contact {
+    /*height: 45vh;*/
+  }
   .service-title {
+    margin: 0;
     font-size: 1.2rem;
     letter-spacing: 2px;
   }
@@ -199,7 +206,7 @@
   }
   .main_footer .footer_logo_ourshot img{
     padding: 10px;
-    width: 240px;
+    width: 150px;
   }
   .main_footer .footer_logo img {
       width: 250px;
